Fix horizontal alignment for longer usernames

--- a/modules/game/client/css/player-list.css
+++ b/modules/game/client/css/player-list.css
@@ -3,9 +3,12 @@
   list-style: none;
 }
 .player-list.two-columns {
-  -moz-column-count: 2;
-  -webkit-column-count: 2;
-  column-count: 2;
+  -webkit-column-count: 2;    /* Chrome, Safari, Opera */
+  -moz-column-count: 2;       /* Firefox */
+  column-count: 2;            /* IE 10+ */
+  -webkit-column-gap: 40px;   /* Chrome, Safari, Opera */
+  -moz-column-gap: 40px;      /* Firefox */
+  column-gap: 40px;           /* IE 10+ */
 }
 
 .player-list.row {
@@ -24,9 +27,17 @@
 
 .player-names {
   padding-left: 20px;
-  /*min-width: 50px;*/
-  width: auto;
-  float: left;
+  min-width: 75px;
+}
+
+.player-score {
+  padding-left: 60px;
+}
+
+.player-score.two-columns {
+  padding-left: 0px;
+  float: right;
+  margin-right: 5px;
 }
 
 .game-drawer {
